# chessnut

./: CMakeLists.txt  compile.sh  polyglot.ini  run.sh
include/: bitboard.hpp  board.hpp  communication.hpp  engine.hpp  evaluate.hpp  logger.hpp  movegen.hpp  moves.hpp  search.hpp  tt.hpp  undo_stack.hpp
src/: bitboard.cpp  board.cpp  communication.cpp  engine.cpp  evaluate.cpp  logger.cpp  main.cpp  main_search.cpp  movegen.cpp  moves.cpp  search.cpp  tt.cpp  undo_stack.cpp
tests/: CMakeLists.txt  board_test.cpp  eval_test.cpp  move_generation_test.cpp  search_test.cpp
